--- a/src/app/components/add-movie/add-movie.component.html
+++ b/src/app/components/add-movie/add-movie.component.html
@@ -5,7 +5,7 @@
         <div *ngIf="inlineNotification.show" class="text-red-600 mt-4 text-center">
           {{ inlineNotification.text }}
         </div>
-  
+
         <div class="mb-4">
           <label for="title" class="block text-gray-700">Title</label>
           <input type="text" id="title" formControlName="title" required
@@ -14,7 +14,7 @@
             <div *ngIf="title.errors?.['required']">Movie Title is required!</div>
           </div>
         </div>
-  
+
         <div class="mb-4">
           <label for="director" class="block text-gray-700">Director</label>
           <input type="text" id="director" formControlName="director" required
@@ -23,7 +23,7 @@
             <div *ngIf="director.errors?.['required']">Movie director is required!</div>
           </div>
         </div>
-  
+
         <div class="mb-4">
           <label for="studio" class="block text-gray-700">Studio</label>
           <input type="text" id="studio" formControlName="studio" required
@@ -32,7 +32,7 @@
             <div *ngIf="studio.errors?.['required']">Movie studio is required.</div>
           </div>
         </div>
-  
+
         <div class="mb-4">
           <label for="movieCast" class="block text-gray-700">Movie Cast</label>
           <input type="text" id="movieCast" formControlName="movieCast" required
@@ -42,31 +42,30 @@
             <div *ngIf="movieCast.errors?.['required']">Movie Cast is required!</div>
           </div>
         </div>
-  
+
         <div class="mb-4">
           <label for="releaseYear" class="block text-gray-700">Release Year</label>
-          <input type="text" id="releaseYear" formControlName="releaseYear" required
+          <input type="number" id="releaseYear" formControlName="releaseYear" required
                  class="w-full px-3 py-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
                  placeholder="">
           <div *ngIf="releaseYear.invalid && (releaseYear.dirty || releaseYear.touched)" class="text-red-600 mt-2">
             <div *ngIf="releaseYear.errors?.['required']">Release Year is required!</div>
           </div>
         </div>
-  
+
         <div class="mb-4">
           <label for="file" class="block text-gray-700">Poster</label>
           <input type="file" id="file" formControlName="poster" required
                  (change)="onFileSelected($event)"
                  class="w-full px-3 py-2 border rounded focus:outline-none focus:ring focus:border-blue-300">
         </div>
-  
+
         <div class="flex justify-center">
           <button type="submit" class="w-2/4 bg-blue-900 text-white px-4 py-2 rounded hover:bg-blue-700">
             Add Movie
           </button>
         </div>
-  
+
       </form>
     </div>
   </div>
-  
