--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -28,6 +28,14 @@
           </div>
         </div>
         <div class="mb-4">
+          <label for="telephone" class="block text-gray-700">Telephone</label>
+          <input type="number" id="telephone" formControlName="telephone" required class="w-full px-3 py-2 border rounded focus:outline-none focus:ring focus:border-blue-300">
+          <div *ngIf="telephone.invalid && (telephone.dirty || telephone.touched)" class="text-red-600 mt-2">
+            <div *ngIf="telephone.errors?.['required']">Telephone is required.</div>
+            <div *ngIf="telephone.errors?.['pattern']">Invalid telephone format.</div>
+          </div>
+        </div>
+        <div class="mb-4">
           <label for="password" class="block text-gray-700">Password</label>
           <input type="password" id="password" formControlName="password" required class="w-full px-3 py-2 border rounded focus:outline-none focus:ring focus:border-blue-300">
           <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-red-600 mt-2">
@@ -38,8 +46,7 @@
         <div class="flex justify-center">
             <button type="submit" class="w-2/4 bg-blue-900 text-white px-4 py-2 rounded hover:bg-blue-700">Register</button>
         </div>
-           
+
     </form>
     </div>
 </div>
-  
