--- a/src/app/components/add-movie/add-movie.component.html
+++ b/src/app/components/add-movie/add-movie.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex items-center justify-center bg-slate-800">
+<div class="min-h-screen flex items-center justify-center  bg-gray-100">
     <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-md mt-10">
       <h2 class="text-2xl font-bold mb-8 text-blue-900 text-center">Add Movie</h2>
       <form [formGroup]="addMovieForm" (ngSubmit)="addMovie()">
