--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,24 +1,40 @@
-<div class="bg-slate-800 min-h-screen p-8">
-    <div class="container mx-auto mt-20">
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
-        <div *ngFor="let movie of movies" class="max-w-sm rounded overflow-auto shadow-lg bg-white">
-          <img class="w-full h-64 object-cover" [src]="movie.posterUrl" alt="Poster of {{movie.title}}">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">{{movie.title}}</div>
-            <p class="text-gray-700 text-base">Directed by: {{movie.director}}</p>
-            <p class="text-gray-700 text-base">Studio: {{movie.studio}}</p>
-            <p class="text-gray-700 text-base">Release Year: {{movie.releaseYear}}</p>
+<div class="bg-gray-100 min-h-screen pt-20 px-8">
+  <div class="container mx-auto h-[calc(100vh-80px)] flex flex-wrap justify-center items-start overflow-y-auto">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 w-full">
+          <div *ngFor="let movie of movies" class="max-w-xs w-full rounded-xl overflow-hidden shadow-md bg-white flex flex-col">
+            <div class="w-full h-48 flex items-center justify-center rounded-xl overflow-hidden">
+              <img class="w-11/12 h-5/6 object-contain rounded-lg" [src]="movie.posterUrl" alt="Poster of {{movie.title}}">
           </div>
-          <div class="px-6 pt-4 pb-2">
-            <span *ngFor="let cast of movie.movieCast" class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
-              {{cast}}
-            </span>
+              <div class="px-6 py-4 flex-grow">
+                  <div class="font-bold text-2xl text-gray-900 mb-2">{{movie.title}}</div>
+                  <p class="text-gray-700 text-base"><span class="font-semibold">Directed by:</span> {{movie.director}}</p>
+                  <p class="text-gray-700 text-base"><span class="font-semibold">Studio:</span> {{movie.studio}}</p>
+                  <p class="text-gray-700 text-base"><span class="font-semibold">Release Year:</span> {{movie.releaseYear}}</p>
+              </div>
+              <div class="px-6 pt-4 pb-2 flex flex-wrap">
+                  <span *ngFor="let cast of movie.movieCast" class="inline-block bg-blue-300 text-blue-900 rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2 hover:bg-blue-400 transition-all duration-300">
+                      {{cast}}
+                  </span>
+              </div>
+              <div *ngIf="isAdmin()" class="px-6 pt-4 pb-4 flex space-x-4 justify-center">
+                <button type="submit" (click)="update(movie)"
+                    class="bg-yellow-500 p-3 rounded-lg hover:bg-yellow-300 transition-all duration-300 relative group">
+                    <img src="assets/update.png" alt="Update" class="w-6 h-6">
+                    <span class="absolute bottom-full mb-2 hidden group-hover:block bg-gray-800 text-white text-xs font-semibold px-2 py-1 rounded">
+                        Update
+                    </span>
+                </button>
+
+                <button type="submit" (click)="delete(movie)"
+                    class="bg-red-500 p-3 rounded-lg hover:bg-red-700 transition-all duration-300 relative group">
+                    <img src="assets/delete.png" alt="Delete" class="w-6 h-6">
+                    <span class="absolute bottom-full mb-2 hidden group-hover:block bg-gray-800 text-white text-xs font-semibold px-2 py-1 rounded">
+                        Delete
+                    </span>
+                </button>
+            </div>
+
           </div>
-          <div *ngIf="isAdmin()" class="px-6 pt-4 pb-2">
-            <button type="submit" (click)="update(movie)" class="w-full bg-yellow-300 text-black px-4 my-2 py-2 rounded hover:bg-blue-700 hover:text-white">Update</button>
-            <button type="submit" (click)="delete(movie)" class="w-full bg-red-600 text-white px-4 py-2 rounded hover:bg-blue-700">Delete</button>
-          </div>
-        </div>
       </div>
-    </div>
   </div>
+</div>
