--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="min-h-screen flex items-center justify-center bg-slate-800">
+<div class="min-h-screen flex items-center justify-center bg-gray-100 ">
     <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-md mt-10">
-      <h2 class="text-2xl font-bold mb-8 text-blue-900 text-center">Login Here</h2>
+      <h2 class="text-2xl font-bold mb-8 text-blue-900 text-center">Login</h2>
       <form [formGroup]="loginForm" (ngSubmit)="login()">
           <div *ngIf="inlineNotification.show" class="text-red-600 mt-4 text-center">
             {{ inlineNotification.text }}
@@ -24,11 +24,10 @@
         <div class="flex justify-center">
             <button type="submit" class="w-2/4 bg-blue-900 text-white px-4 py-2 rounded hover:bg-blue-700">Login</button>
         </div>
-        <div class="flex justify-center">
+        <div class="flex justify-center py-3">
           <a routerLink="/forgot-password" class="text-red-700 hover:underline hover:cursor-pointer mr-5">Forgot Password</a>
           <p>New User? <a routerLink="/register" class="text-blue-500 hover:underline hover:cursor-pointer">Register Here</a></p>
         </div>
     </form>
     </div>
 </div>
-  
